# Fake-News-Detector-using-ML

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
CODE FILE/: app.ipynb  frontend.py
Models/: tfidf_vectorizer.jb
